modul 4: android widgets bug not fixed

--- a/Modul 4/1. Android Widgets/MyStackWidget/app/src/main/res/layout/widget_item.xml
+++ b/Modul 4/1. Android Widgets/MyStackWidget/app/src/main/res/layout/widget_item.xml
@@ -11,5 +11,5 @@
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/starwars1" />
+        app:srcCompat="@drawable/darth_vader" />
 </LinearLayout>
