--- a/Modul 4/2. Android Notification/CustomNotif/app/src/main/res/layout/activity_main.xml
+++ b/Modul 4/2. Android Notification/CustomNotif/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_show_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:background="@color/colorAccent"
-        android:onClick="sendNotification"
-        android:text="@string/send_notif"
-        android:textColor="@android:color/white" />
-
+        android:textColor="#FFFFFF"
+        android:text="@string/text_show_notif"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
