--- a/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/res/layout/activity_settings.xml
+++ b/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/res/layout/activity_settings.xml
@@ -11,6 +11,15 @@
     android:orientation="vertical"
     tools:context=".SettingsActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
+        android:paddingLeft="5dp"
+        android:text="@string/language_settings"
+        android:textSize="15sp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,24 +32,33 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:padding="5dp"
-            android:text="Bahasa"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:text="@string/language"
+            android:textSize="15sp"
+            android:textColor="#000"/>
 
         <ImageView
             android:id="@+id/imgLang"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:padding="5dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/ic_add_black_24dp" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
+        android:paddingTop="30dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/reminder_settings"
+        android:textSize="15sp"/>
 
     <Switch
         android:id="@+id/dailyReminder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:padding="5dp"
         android:text="@string/daily_reminder"
         android:textSize="15sp" />
